FH: .card-text .fade //section our story

--- a/index.html
+++ b/index.html
@@ -1311,63 +1311,57 @@
 
 <!-- SECTION "OUR STORY" -->
     <section id="our-story">
-    <!-- class="mb-5" -->
         <div class="container justify-content-sm-center py-4">
             <div class="row row-margin my-4">
                 <div class="col-12 col-lg-6">
-                <h1 class="section-title text-center pb-4" id="about-us">Our story</h1>
+                    <h1 class="section-title text-center pb-4" id="about-us">Our story</h1>
 
-                 <div class="tab-content mb-4" id="pills-tabContent">
-                    <div class="tab-pane fade show active" id="pills-1926" role="tabpanel" aria-labelledby="pills-1926-tab">
-                        <p class="card-text text-center text-md-left">After the end of WW1, the young and talented Ilias Togas moves to Athens from Arcadia, a region in southern Greece. Ilias founds a small atelier at the dawn of Art Deco epoque. The high-quality craftsmanship makes Ilias Togas well-known throughout Greece.</p>
-                    </div>
-                    <div class="tab-pane fade" id="pills-1945" role="tabpanel" aria-labelledby="pills-1945-tab">
-                        <!-- <h4 class="title-year pt-1" id="1945">1945</h4> -->
-                        <p class="card-text text-center text-md-left">WW2 comes to its end and Ilias Togas marries Katerina Schik, the daughter of a famous textile-manufacturing dynasty of Austrian origin. The love match leads to the union of the two businesses. Togas now combines production with retail and a unique family business empire is established.</p>
-                    </div>
-                    <div class="tab-pane fade" id="pills-1970" role="tabpanel" aria-labelledby="pills-1970-tab">
-                        <!-- <h4 class="title-year pt-1" id="1970">1970</h4> -->
-                        <p class="card-text text-center text-md-left">In the early 1970s sons of Ilias, Pavlos and Dimitris Togas, inherit the family business. The brothers decide to expand the company into the home textile industry. They use the recourses of the factory and the embroidery machines while utilizing the expertise handed down to them by their father.</p>
-                    </div>
-                    <div class="tab-pane fade" id="pills-1995" role="tabpanel" aria-labelledby="pills-1995-tab">
-                        <!-- <h4 class="title-year pt-1" id="1995">1995</h4> -->
-                        <p class="card-text text-center text-md-left">Since 1995, the family story grows even more with the arrival of Pavlos’ son, Kostas Togas. He is the one that will initiate the expansion of the Togas sales network to new markets all around the world. Custom service is now Togas’ priority, mastering the service and bringing it to another level.</p>
-                    </div>
-                 </div>
+                     <div class="tab-content mb-4" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-1926" role="tabpanel" aria-labelledby="pills-1926-tab">
+                            <p class="card-text text-center text-md-left">After the end of WW1, the young and talented Ilias Togas moves to Athens from Arcadia, a region in southern Greece. Ilias founds a small atelier at the dawn of Art Deco epoque. The high-quality craftsmanship makes Ilias Togas well-known throughout Greece.</p>
+                        </div>
+                        <div class="tab-pane fade" id="pills-1945" role="tabpanel" aria-labelledby="pills-1945-tab">
+                            <p class="card-text text-center text-md-left">WW2 comes to its end and Ilias Togas marries Katerina Schik, the daughter of a famous textile-manufacturing dynasty of Austrian origin. The love match leads to the union of the two businesses. Togas now combines production with retail and a unique family business empire is established.</p>
+                        </div>
+                        <div class="tab-pane fade" id="pills-1970" role="tabpanel" aria-labelledby="pills-1970-tab">
+                            <p class="card-text text-center text-md-left">In the early 1970s sons of Ilias, Pavlos and Dimitris Togas, inherit the family business. The brothers decide to expand the company into the home textile industry. They use the recourses of the factory and the embroidery machines while utilizing the expertise handed down to them by their father.</p>
+                        </div>
+                        <div class="tab-pane fade" id="pills-1995" role="tabpanel" aria-labelledby="pills-1995-tab">
+                            <p class="card-text text-center text-md-left">Since 1995, the family story grows even more with the arrival of Pavlos’ son, Kostas Togas. He is the one that will initiate the expansion of the Togas sales network to new markets all around the world. Custom service is now Togas’ priority, mastering the service and bringing it to another level.</p>
+                        </div>
+                     </div>
 
-                <div class="controls-story mb-5">
+                    <div class="controls-story mb-5">
+                        <ul class="nav nav-pills justify-content-center mt-1 mb-5" id="pills-tab" role="tablist">
+                            <li class="nav-item">
+                            <a class="nav-link mr-2 active" id="pills-1926-tab" data-toggle="pill" href="#pills-1926" role="tab" aria-controls="pills-home" aria-selected="true"><span>1926</span></a>
+                            </li>
 
-                <ul class="nav nav-pills justify-content-center mt-1 mb-5" id="pills-tab" role="tablist">
-                    <li class="nav-item">
-                    <a class="nav-link mr-2 active" id="pills-1926-tab" data-toggle="pill" href="#pills-1926" role="tab" aria-controls="pills-home" aria-selected="true"><span>1926</span></a>
-                    </li>
+                            <li class="nav-item">
+                            <a class="nav-link mr-2" id="pills-1945-tab" data-toggle="pill" href="#pills-1945" role="tab" aria-controls="pills-contact" aria-selected="false"><span>1945</span></a>
+                            </li>
 
-                    <li class="nav-item">
-                    <a class="nav-link mr-2" id="pills-1945-tab" data-toggle="pill" href="#pills-1945" role="tab" aria-controls="pills-contact" aria-selected="false"><span>1945</span></a>
-                    </li>
+                            <li class="nav-item">
+                            <a class="nav-link mr-2" id="pills-1970-tab" data-toggle="pill" href="#pills-1970" role="tab" aria-controls="pills-profile" aria-selected="false"><span>1970</span></a>
+                            </li>
 
-                    <li class="nav-item">
-                    <a class="nav-link mr-2" id="pills-1970-tab" data-toggle="pill" href="#pills-1970" role="tab" aria-controls="pills-profile" aria-selected="false"><span>1970</span></a>
-                    </li>
-
-                    <li class="nav-item">
-                    <a class="nav-link mr-2" id="pills-1995-tab" data-toggle="pill" href="#pills-1995" role="tab" aria-controls="pills-contact" aria-selected="false"><span>1995</span></a>
-                    </li>
-                 </ul> 
-
-                 </div>
-
+                            <li class="nav-item">
+                            <a class="nav-link mr-2" id="pills-1995-tab" data-toggle="pill" href="#pills-1995" role="tab" aria-controls="pills-contact" aria-selected="false"><span>1995</span></a>
+                            </li>
+                         </ul> 
+                     </div>
                         
                 </div>
+                <!-- /col -->
 
-                <div class="col-12 col-lg-6 justify-content-sm-center my-5 my-md-0">
-                    <!-- <div class="view"> -->
+                <div class="col-12 col-lg-6 justify-content-sm-center my-4 py-md-0">
                     <img src="img/img-togas-lp3/history.jpg" alt="History of Togas" class="img-fluid hoverable">
-                    <!-- </div> -->
                 </div>
                 
             </div>
+            <!-- /row -->
         </div>
+        <!-- /container -->
 </section>
 <!-- /SECTION "OUR STORY" -->
 
