FH: some style adjusting

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="col-sm-12 col-md-8 mt-4 pr-5">
         <h1 class="section-title">Create the home<br>of your dreams</h1>
             <h6 class="subscript-one pt-4 pb-2">mod eaquiaspet&nbsp;&nbsp;<span><img src="img/img-togas-lp3/line-02-right-09.svg" width="150" alt=""></span></h6>
-                <img src="img/img-togas-lp3/create2.jpg" alt="" class="img-fluid d-block d-md-none w-50 my-4 float-left float-md-none pr-3 pr-sm-5">
+                <img src="img/img-togas-lp3/create2.jpg" alt="Custom-made" class="img-fluid d-block d-md-none w-50 my-4 float-left float-md-none pr-3 pr-sm-5">
                 <p class="text-justify txt-p py-4">For almost a century, Togas has been a pioneer in quality textiles, bringing luxury and impeccable style to homes and venues all around the world. While Togas remains proud of its history and Greek heritage, it is a global manufacturer and retailer in its own field, having earned the confidence of its worldwide customers by creating over 3,000 products that excel in quality, beauty and style.</p> 
                 <p class="text-justify txt-p pb-4">Providing exceptional bespoke customer service with made-to-measure collections for you, our customers, is our top priority. We develop unique products and apply them to every need, therefore enabling you to find the perfect design and fabric in order to master your home decoration. Each of our bespoke items is an exceptionally balanced and harmonized masterpiece. The meticulous attention to detail and the professional craftsmanship used are essential to our service.</p> 
                 <p class="text-justify txt-p pb-4">Our custom-made philosophy is based on family values. Utilizing the invaluable knowledge that has been passed down from one generation to the next, our team is a group of highly experienced professionals who can lead you to the best home solutions. Our in-house design team determines a creative and unique style, while utilizing Togas’ century-old weaving techniques in order to create exclusive, high-quality fabrics. The fabrics we use are exercised throughout the process of production and creation of each of our products. Silk, cotton, stonewashed organic linens and bamboo are but a few of the extensive fabrics that our customers can choose from.</p> 
@@ -797,22 +797,22 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-6 mt-1 px-5">
 
-<!-- TEST THUMBNAIL 2 see styles&jQuery -->
-<ul id="thumbnails">
- <li><a href="#slide1"><img src="/media/couture/img/img-togas-lp3/hardware (1).jpg" alt="Hardware & Accessories"></a></li>
- <li><a href="#slide2"><img src="/media/couture/img/img-togas-lp3/hardware (4).jpg" alt="Hardware & Accessories"></a></li>
- <li><a href="#slide3"><img src="/media/couture/img/img-togas-lp3/hardware (3).jpg" alt="Hardware & Accessories"></a></li>
- <li><a href="#slide4"><img src="/media/couture/img/img-togas-lp3/hardware (5).jpg" alt="Hardware & Accessories"></a></li>
-</ul>
-<div class="thumb-box">
-  <ul class="thumbs">
-    <li><a href="#1" data-slide="1"><img src="/media/couture/img/img-togas-lp3/hardware (1).jpg" alt="Hardware & Accessories"></a></li>
-    <li><a href="#2" data-slide="2"><img src="/media/couture/img/img-togas-lp3/hardware (4).jpg"  alt="Hardware & Accessories"></a></li>
-    <li><a href="#4" data-slide="3"><img src="/media/couture/img/img-togas-lp3/hardware (3).jpg" alt="Hardware & Accessories"></a></li>
-    <li><a href="#4" data-slide="4"><img src="/media/couture/img/img-togas-lp3/hardware (5).jpg" alt="Hardware & Accessories"></a></li>
-  </ul>
-</div>
-<!-- /TEST THUMBNAIL 2 -->
+                            <!-- TEST THUMBNAIL 2 see styles&jQuery -->
+                            <ul id="thumbnails">
+                             <li><a href="#slide1"><img src="/media/couture/img/img-togas-lp3/hardware (1).jpg" alt="Hardware & Accessories"></a></li>
+                             <li><a href="#slide2"><img src="/media/couture/img/img-togas-lp3/hardware (4).jpg" alt="Hardware & Accessories"></a></li>
+                             <li><a href="#slide3"><img src="/media/couture/img/img-togas-lp3/hardware (3).jpg" alt="Hardware & Accessories"></a></li>
+                             <li><a href="#slide4"><img src="/media/couture/img/img-togas-lp3/hardware (5).jpg" alt="Hardware & Accessories"></a></li>
+                            </ul>
+                            <div class="thumb-box">
+                              <ul class="thumbs">
+                                <li><a href="#1" data-slide="1"><img src="/media/couture/img/img-togas-lp3/hardware (1).jpg" alt="Hardware & Accessories"></a></li>
+                                <li><a href="#2" data-slide="2"><img src="/media/couture/img/img-togas-lp3/hardware (4).jpg"  alt="Hardware & Accessories"></a></li>
+                                <li><a href="#4" data-slide="3"><img src="/media/couture/img/img-togas-lp3/hardware (3).jpg" alt="Hardware & Accessories"></a></li>
+                                <li><a href="#4" data-slide="4"><img src="/media/couture/img/img-togas-lp3/hardware (5).jpg" alt="Hardware & Accessories"></a></li>
+                              </ul>
+                            </div>
+                            <!-- /TEST THUMBNAIL 2 -->
 
 <!--                             <div class="img-wrapper text-center mx-auto mb-5">
                                 <img src="img/img-togas-lp3/hardware (4).jpg" alt="Hardware & Accessories">
@@ -1046,7 +1046,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Tony<br>Karantonis</h5>
                 <h6 class="subscript-center pb-3">director of creative studio</h6>
-                <p class="card-text">Tony brings at Togas 30 years of experience in custom-made window treatments, upholstery, bedding and furniture. For years, he has been working with top designers in New York City delivering high-quality workmanship for all their projects. Entrusting Tony to create a custom home product, one can be confident to receive a unique tailored look that will appeal to an eclectic style. </p>
+                <p class="card-text">Tony brings at Togas 30 years of experience in custom-made window treatments, upholstery, bedding and furniture. For years, he has been working with top designers in New York City delivering high-quality workmanship for all their projects. Entrusting Tony to create a custom home product, one can be confident to receive a unique tailored look that will appeal to an eclectic style.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1068,8 +1068,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Tzanis<br>Sifnaios</h5>
                 <h6 class="subscript-center pb-3">Architectural Design Director</h6>
-                <p class="card-text">Tzannis studied Graphics & Design and has been working for over 30 years in his field. He initially worked as an Art Director in leading Greek magazines while he has been working at Togas for the last five years. He is one of Togas’ primary curators and many designs are influenced by his approach and aesthetics. He believes that quality and attention to detail are crucial for building a luxury brand.
-        </p>
+                <p class="card-text">Tzannis studied Graphics & Design and has been working for over 30 years in his field. He initially worked as an Art Director in leading Greek magazines while he has been working at Togas for the last five years. He is one of Togas’ primary curators and many designs are influenced by his approach and aesthetics. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1094,7 +1093,7 @@
 
             <div class="container pt-5 align-items-center text-center">
                  <h3 class="section-black-title text-center pb-4">testemonials</h3>
-                 <img src="img/img-togas-lp3/quote-01-16.svg" width="30" alt="" class="pb-3">
+                 <img src="img/img-togas-lp3/quote-01-16.svg" width="30" alt="quote" class="pb-3">
             </div>
 
             <div id="testemonials-slider" class="owl-carousel owl-theme">
@@ -1263,24 +1262,7 @@
             </div>
         </div>
 
-<!--         <div class="row d-block d-lg-none justify-content-center">
-            <div class="col-12 justify-content-center text-center">
-                 <button type="button" class="btn btn-outline-bronze btn-fill">Call an expert</button>
-            </div>
-        </div>
-
-        <div class="row d-block d-lg-none justify-content-center my-4">
-            <div class="col-12 mb-4">
-                <a href=""><span class="border-bronze img-fluid"><img src="img/img-togas-lp3/fb-282.svg" width="25px" alt="Facebook"></span><span class="txt-line pl-3">Find Us on Facebook</span></a>
-            </div>
-            
-            <div class="col-12">   
-                <a href=""><span class="border-bronze img-fluid"><img src="img/img-togas-lp3/inst-27.svg" width="25px" alt="Instagram"></span>
-                <span class="txt-line pl-3">Follow Us on Instagram</span></a>
-            </div>
-        </div> -->
-
-    <hr class="line"> 
+        <hr class="line"> 
     </div>
     <!-- /container -->
     <!-- /THREE COLUMNS INSIDE -->
@@ -1369,83 +1351,80 @@
 <!-- SECTION "READY MADE" -->
     <section id="ready-made">
         <div class="container-fluid bg-grey mt-5 pt-5 pb-4">
-        <div class="container pt-4">
+            <div class="container pt-4">
                 <div class="row justify-content-center text-center">
                     <h2 class="section-title h2-responsive">Ready made</h2>
                 </div>
 
-        <!-- SUBSCRIPT -->
-         <div class="row mt-3">
-            <div class="col-sm-12 mt-3">
-            <h2 class="subscript-center">
-                <img src="img/img-togas-lp3/line-02-left-08.svg" alt="" class="decor-line d-none d-sm-inline-block">
-                <span class="px-2">mod eaquaspiet</span>
-              <img src="img/img-togas-lp3/line-02-right-09.svg" alt="" class="decor-line d-none d-sm-inline-block">
-                </h2>      
-             </div>
-        </div>
+                <!-- SUBSCRIPT -->
+                <div class="row mt-3">
+                    <div class="col-sm-12 mt-3">
+                    <h2 class="subscript-center">
+                        <img src="img/img-togas-lp3/line-02-left-08.svg" alt="" class="decor-line d-none d-sm-inline-block">
+                        <span class="px-2">mod eaquaspiet</span>
+                      <img src="img/img-togas-lp3/line-02-right-09.svg" alt="" class="decor-line d-none d-sm-inline-block">
+                        </h2>      
+                     </div>
+                </div>
 
-        <!--  <div class="owl-carousel"> -->
-        <div class="row row-margin d-flex justify-content-center">
-        <div class="col-10 col-sm-6 col-md-4">
-          <div class="mb-5 mt-5 text-center view overlay">
-            <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-01.jpg" alt="Bedding">
-                <a>
-                    <div class="mask waves-effect waves-light rgba-white-slight"></div>
-                </a>
-            <div class="card-body">
-              <h5 class="card-title subscript-one">Bedding</h5>
-              <p class="card-text">Met, suntiate solorro vitaquo venihit, 
-        nobis eos sunt audit, quiatur comnihi</p>
-                     <button type="button" class="btn btn-outline-bronze-cm my-4" href="#">Shop now</button>
+                <div class="row row-margin d-flex justify-content-center">
+                    <div class="col-10 col-sm-6 col-md-4">
+                      <div class="mb-5 mt-5 text-center view overlay">
+                        <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-01.jpg" alt="Bedding">
+                            <a>
+                                <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            </a>
+                        <div class="card-body">
+                          <h5 class="card-title subscript-one">Bedding</h5>
+                          <p class="card-text">Met, suntiate solorro vitaquo venihit, nobis eos sunt audit, quiatur comnihi</p>
+                                 <button type="button" class="btn btn-outline-bronze-cm my-4" href="#">Shop now</button>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-10 col-sm-6 col-md-4">
+                      <div class="mb-5 mt-5 text-center view overlay">
+                        <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-02.jpg" alt="Duvets">
+                            <a>
+                                <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            </a>
+                        <div class="card-body">
+                          <h5 class="card-title subscript-one">Duvets</h5>
+                          <p class="card-text">Met, suntiate solorro vitaquo venihit, nobis eos sunt audit, quiatur comnihi</p>
+                                <button type="button" class="btn btn-outline-bronze-cm my-4" href="#">Shop now</button>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-10 col-sm-6 col-md-4">
+                      <div class="my-5 text-center view overlay">
+                        <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-03.jpg" alt="Pillows">
+                            <a>
+                                <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            </a>
+                        <div class="card-body">
+                          <h5 class="card-title subscript-one">Pillows</h5>
+                          <p class="card-text">Met, suntiate solorro vitaquo venihit, nobis eos sunt audit, quiatur comnihi</p>
+                          <button type="button" class="btn btn-outline-bronze-cm my-4" href="#">Shop now</button>
+                         </div>
+                      </div>
+                    </div>
+                       
+                </div>
+                <!-- /row -->
             </div>
-          </div>
+            <!-- /container -->
         </div>
-
-        <div class="col-10 col-sm-6 col-md-4">
-          <div class="mb-5 mt-5 text-center view overlay">
-            <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-02.jpg" alt="Duvets">
-                <a>
-                    <div class="mask waves-effect waves-light rgba-white-slight"></div>
-                </a>
-            <div class="card-body">
-              <h5 class="card-title subscript-one">Duvets</h5>
-              <p class="card-text">Met, suntiate solorro vitaquo venihit, 
-        nobis eos sunt audit, quiatur comnihi</p>
-                    <button type="button" class="btn btn-outline-bronze-cm my-4" href="#">Shop now</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-10 col-sm-6 col-md-4">
-          <div class="my-5 text-center view overlay">
-            <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-03.jpg" alt="Pillows">
-                <a>
-                    <div class="mask waves-effect waves-light rgba-white-slight"></div>
-                </a>
-            <div class="card-body">
-              <h5 class="card-title subscript-one">Pillows</h5>
-              <p class="card-text">Met, suntiate solorro vitaquo venihit, 
-        nobis eos sunt audit, quiatur comnihi</p>
-              <button type="button" class="btn btn-outline-bronze-cm my-4" href="#">Shop now</button>
-             </div>
-          </div>
-        </div>
-        <!-- </div>  -->
-        <!-- /CAROUSEL -->
-
-
-        </div>
-        </div>
-        </div>
+        <!-- /container-fluid -->
     </section>
 <!-- /SECTION "READY MADE" -->
 
 
 <!-- BUTTON TOP -->
 <div id="top">
-<img src="/media/couture/img/img-togas-lp3/top2.png" alt="Top">
+    <img src="/media/couture/img/img-togas-lp3/top2.png" alt="Top">
 </div>
+<!-- /BUTTON TOP -->
 
 <!-- FOOTER MDB -->
 <!--Footer-->
@@ -1522,16 +1501,16 @@
 
 <!-- BUTTON TOP -->
 <script type="text/javascript">
-  var top_show = 150; // В каком положении полосы прокрутки начинать показ кнопки "Наверх"
-  var delay = 1000; // Задержка прокрутки
+  var top_show = 150; // In what position of scroll bar we are starting to show the buton "Top"
+  var delay = 1000; // Scrolling delay
   $(document).ready(function() {
-    $(window).scroll(function () { // При прокрутке попадаем в эту функцию
-      /* В зависимости от положения полосы прокрукти и значения top_show, скрываем или открываем кнопку "Наверх" */
+    $(window).scroll(function () { // On scroll we are going to this function
+      /* Depend on position of the scrollbar and the options of top_show,  hide or show the buton "Top"*/
       if ($(this).scrollTop() > top_show) $('#top').fadeIn();
       else $('#top').fadeOut();
     });
-    $('#top').click(function () { // При клике по кнопке "Наверх" попадаем в эту функцию
-      /* Плавная прокрутка наверх */
+    $('#top').click(function () { // On button "top" click we are getting to this function
+      /*  Animate of the scroll */
       $('body, html').animate({
         scrollTop: 0
       }, delay);
@@ -1551,7 +1530,6 @@ $('.nav-togas a').smoothScroll({
 
 <script>
     // FOR MAPS // Google Maps Api
-
       function initMap() {
         // Styles a map in silver mode.
         var map = new google.maps.Map(document.getElementById('map1'), {
@@ -1747,11 +1725,6 @@ $('.nav-togas a').smoothScroll({
 
     </script>
 
-
-
-
-
-
 <!-- ////////////////// product-slider /////////////////////// -->
 <!-- https://codepen.io/pankajthakur/pen/qmpKaw -->
 <!-- STYLES is in styles.css -->
@@ -1811,11 +1784,11 @@ $('#fail').hide();
 
 function sendMessage() {
     var formData = {
-        'name'               : $('input[name=firstname]').val(),
-        'phone'             : $('input[name=phone]').val(),
-        'email'            : $('input[name=email]').val(),
-        'key'            : $('input[name=key]').val(),
-		'time'            : $('input[name=group100]:checked').val(),
+        'name'        : $('input[name=firstname]').val(),
+        'phone'       : $('input[name=phone]').val(),
+        'email'       : $('input[name=email]').val(),
+        'key'         : $('input[name=key]').val(),
+		'time'        : $('input[name=group100]:checked').val(),
         'submit'      : 1 
     };
     $.ajax({
