--- a/index.html
+++ b/index.html
@@ -1153,9 +1153,9 @@
                         <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="modal" data-target="#modalContactForm">call an expert</button>
 
                         <div class="view zoom">
-                            <img src="/media/couture/img/img-togas-lp3/map1.jpg" alt="Map New York" height="346" class="img-fluid mx-auto my-5">
+                           <iframe  width = "348" height = "348" style = "margin-bottom:48px;margin-left:1px;margin-right:1px;margin-top:48px;" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJCa-MgKZZwokRBNxwW2127LE&key=AIzaSyBL1G20gmcGTrykRlI8DdhCnM-Z39GdNJQ" allowfullscreen></iframe>
                         </div>
-
+AIzaSyBL1G20gmcGTrykRlI8DdhCnM-Z39GdNJQ
                            <!-- Version from Google API __v1 -->
                             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.840168606366!2d-73.99091304890247!3d40.74354234352041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a6808caf09%3A0xb1ec766d5b70dc04!2s212+5th+Ave%2C+New+York%2C+NY+10010%2C+USA!5e0!3m2!1sen!2sru!4v1524036275118" height="346" frameborder="0" style="border:0" class="img-fluid my-5" allowfullscreen></iframe> -->
 
@@ -1164,7 +1164,7 @@
                              <!-- <iframe  id="map1" width="348" height="348" frameborder="0" style="border:0" src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyCN9sk__f4JaHJBCIJAnmoqa2m8ZbGrvuA&center=40.743394463697385,-73.98851880000001&zoom=18&format=png&maptype=roadmap&style=element:geometry%7Ccolor:0xf5f5f5&style=element:labels.icon%7Cvisibility:off&style=element:labels.text.fill%7Ccolor:0x616161&style=element:labels.text.stroke%7Ccolor:0xf5f5f5&style=feature:administrative.land_parcel%7Celement:labels.text.fill%7Ccolor:0xbdbdbd&style=feature:poi%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:poi%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:poi.park%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:poi.park%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:road%7Celement:geometry%7Ccolor:0xffffff&style=feature:road.arterial%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:road.highway%7Celement:geometry%7Ccolor:0xdadada&style=feature:road.highway%7Celement:labels.text.fill%7Ccolor:0x616161&style=feature:road.local%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:transit.line%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:transit.station%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:water%7Celement:geometry%7Ccolor:0xc9c9c9&style=feature:water%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&size=348x348" allowfullscreen></iframe>  -->
 
 
-                             <div id="map1"></div>
+                             <!--<div id="map1"></div>-->
                              <!-- Google Maps API error: ApiNotActivatedMapError https://developers.google.com/maps/documentation/javascript/error-messages#api-not-activated-map-error -->
                         <!-- </div> -->
                 </div>
@@ -1182,7 +1182,7 @@
                         <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="modal" data-target="#modalContactForm">call an expert</button>
                          
                          <div class="view zoom">
-                            <img src="/media/couture/img/img-togas-lp3/map2.jpg" alt="Map Greenwich" height="346" class="img-fluid mx-auto my-5">
+                           <iframe  width = "348" height = "348" style = "margin-bottom:48px;margin-left:1px;margin-right:1px;margin-top:48px;" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Greenwich%2051-53%20East%20Putnam%20Avenue%20Greenwich%20CT%2006830&key=AIzaSyBL1G20gmcGTrykRlI8DdhCnM-Z39GdNJQ" allowfullscreen></iframe>
                         </div>
 
                             <!-- Version from Google API __v1 -->
@@ -1203,7 +1203,7 @@
                         <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="modal" data-target="#modalContactForm">call an expert</button>
                         
                         <div class="view zoom">
-                            <img src="/media/couture/img/img-togas-lp3/map3.jpg" alt="Map Rousevelt field mall" height="346" class="img-fluid mx-auto my-5">
+                            <iframe  width = "348" height = "348" style = "margin-bottom:48px;margin-left:1px;margin-right:1px;margin-top:48px;" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20630%20Old%20Country%20Road%20Garden%20City%2011530&key=AIzaSyBL1G20gmcGTrykRlI8DdhCnM-Z39GdNJQ" allowfullscreen></iframe>
                         </div>
         <!--                 <div class="view overlay"> -->
 
@@ -1492,7 +1492,7 @@
 <!-- Form validation -->
 <script type="text/javascript" src="js/validate.min.js"></script>
 <!-- For SmoothScroll -->
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script src="js/smoothScroll.js"></script>
 
 
@@ -1528,178 +1528,7 @@ $('.nav-togas a').smoothScroll({
 </script>
 
 
-<script>
-    // FOR MAPS // Google Maps Api
-      function initMap() {
-        // Styles a map in silver mode.
-        var map = new google.maps.Map(document.getElementById('map1'), {
-          center: {lat: 40.743394463697385, lng: -73.98851880000001}, 
-          zoom: 18,
-          styles: [
-              {
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#f5f5f5"
-                  }
-                ]
-              },
-              {
-                "elementType": "labels.icon",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#616161"
-                  }
-                ]
-              },
-              {
-                "elementType": "labels.text.stroke",
-                "stylers": [
-                  {
-                    "color": "#f5f5f5"
-                  }
-                ]
-              },
-              {
-                "featureType": "administrative.land_parcel",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#bdbdbd"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#eeeeee"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#757575"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi.park",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#e5e5e5"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi.park",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#9e9e9e"
-                  }
-                ]
-              },
-              {
-                "featureType": "road",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#ffffff"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.arterial",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#757575"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.highway",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#dadada"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.highway",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#616161"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.local",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#9e9e9e"
-                  }
-                ]
-              },
-              {
-                "featureType": "transit.line",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#e5e5e5"
-                  }
-                ]
-              },
-              {
-                "featureType": "transit.station",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#eeeeee"
-                  }
-                ]
-              },
-              {
-                "featureType": "water",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#c9c9c9"
-                  }
-                ]
-              },
-              {
-                "featureType": "water",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#9e9e9e"
-                  }
-                ]
-              }
-            ]
-        });
-      }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN9sk__f4JaHJBCIJAnmoqa2m8ZbGrvuA&callback=initMap"
-    async defer></script>
+
 
     <script>
 // For carousel with thumbnail
