--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <div class="modal-dialog" role="document">
     <div class="modal-content modal-bg pb-5">
         <div class="modal-header-togas-top text-center mb-4">
-            <h4 class="modal-title-top">Talk with our expert on <span>+1 212 300 2876</span></h4>
+            <h4 class="modal-title-top">Talk with our expert on <span style="white-space: nowrap;">+1 212 300 2876</span></h4>
         </div>
 
         <div class="modal-body mx-5">
@@ -214,7 +214,7 @@
             </div>
 
             <!--Radio group-->
-            <div class="d-flex flex-row justify-content-start align-items-end">
+            <div class="d-flex flex-row justify-content-start align-items-end time-select">
                 <div class="form-check">
                     <input class="form-check-input" name="group100" value = "now" type="radio" id="radio100">
                     <label class="form-check-label txt-inner" for="radio100">Now</label>
