form close btn, modal paaading fix

--- a/index.html
+++ b/index.html
@@ -173,10 +173,15 @@
 
 <!-- MODAL WINDOW -->
 <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
+<div class="modal-dialog modal-callyou" role="document">
     <div class="modal-content modal-bg pb-5">
         <div class="modal-header-togas-top text-center mb-4">
             <h4 class="modal-title-top">Talk with our expert on <span style="white-space: nowrap;">+1 212 300 2876</span></h4>
+			
+			<button type="button" class="close mr-3 mt-1" data-toggle="collapse" data-target="#modalContactForm" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+						
         </div>
 
         <div class="modal-body mx-5">
