--- a/index.html
+++ b/index.html
@@ -1747,7 +1747,7 @@ $('.nav-togas a').smoothScroll({
 
 
 
-    <script>
+<!--    <script>
 // For carousel with thumbnail
 // http://slippry.com/examples/thumbnails/
 
@@ -1769,7 +1769,7 @@ $('.nav-togas a').smoothScroll({
           return false;
         });
 
-    </script>
+    </script>-->
 
 <!-- ////////////////// product-slider /////////////////////// -->
 <!-- https://codepen.io/pankajthakur/pen/qmpKaw -->
