--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@
         <div class="container-fluid bg-section-black pt-5 pb-4">
 
             <div class="container pt-5 align-items-center text-center">
-                 <h3 class="section-black-title text-center pb-4">testemonials</h3>
+                 <h3 class="section-black-title text-center pb-4">testimonials</h3>
                  <img src="img/img-togas-lp3/quote-01-16.svg" width="30" alt="quote" class="pb-3">
             </div>
 
