invisible pagination for header slider'

--- a/index.html
+++ b/index.html
@@ -121,7 +121,15 @@
 
     <!--Carousel Wrapper-->
       <div id="carousel-example-1" class="carousel slide carousel-fade carousel-bg" data-ride="carousel" data-interval="10000" data-pause="hover" data-keyboard="true">
+	  <a class="left carousel-control" href="#carousel-example-1" data-slide="prev" style = "left:0!important;">
+		<span class="glyphicon glyphicon-chevron-left"></span>
+		<span class="sr-only">Previous</span>
+	  </a>
 
+	  <a class="right carousel-control" href="#carousel-example-1" data-slide="next" style = "right:0!important;">
+		<span class="glyphicon glyphicon-chevron-right"></span>
+		<span class="sr-only">Next</span>
+	  </a>	  
         <!--Indicators-->
         <ol class="carousel-indicators">
           <li data-target="#carousel-example-1" data-slide-to="0" class="active"></li>
@@ -167,8 +175,12 @@
           <!--/.Third slide-->
 
         </div>
+		 <!-- Left and right controls -->
+
         <!--/.Slides-->   
+
       </div>
+
       <!--/.Carousel Wrapper-->
 
 </header>
